fixed z-index, gemfile and lock match master

--- a/app/assets/stylesheets/tag_searches.scss
+++ b/app/assets/stylesheets/tag_searches.scss
@@ -68,6 +68,7 @@
     padding: 0.5rem;
     max-height: 20vh;
     overflow-y: auto;
+    z-index: 1;
 }
 
 #tag-accumulator li {
